# Rick-MortyApp

./: .gitignore  CMakeLists.txt  README.md  build.sh  docker-compose.yml
.github/: cache-inputs.txt
.github/workflows/: ci.yml
appimage/: AppRun  COPYING  RickAndMortyViewer.desktop  generate-icon.sh
cmake/: bundle-glibc.sh  fonts.conf  run.bat.in  run.sh.in
cmake/patches/: qt6-mingw-disable-d3d12.patch  qt6-mingw-netlistmgr-compat.patch  qt6-mingw-win11-compat.patch
cmake/scripts/: copy-if-exists.cmake  qt-init-repository.sh
cmake/toolchains/: linux-arm64.cmake  linux-x86_64.cmake  windows-arm64.cmake  windows-x86_64.cmake
docker/: Dockerfile  Dockerfile.test-runner  Dockerfile.wine-arm64  Dockerfile.wine10-arm64  Dockerfile.wine64
docs/: API.md  BUILDING.md  CI.md  DESIGN.md  DOCKER.md  TESTING.md  UI_DESIGN.md
resources/: resources.qrc
resources/qml/: Main.qml  Theme.qml  qmldir
resources/qml/components/: CharacterCard.qml  CharacterDetailPopup.qml  EpisodeDelegate.qml  EpisodeHeaderBanner.qml  HamburgerButton.qml  PortalSpinner.qml  SeasonSectionHeader.qml  StarField.qml
resources/shaders/: circlemask.frag  circlemask.frag.qsb
src/: MainWindow.cpp  main.cpp
src-project/: CMakeLists.txt
src/core/: ApiClient.cpp  ApiClient.h  CurlHttpClient.cpp  CurlHttpClient.h  DataStore.cpp  DataStore.h  IHttpClient.h  Models.h  Observer.h
src/ui/: CharacterModel.cpp  CharacterModel.h  EpisodeModel.cpp  EpisodeModel.h  QmlBridge.cpp  QmlBridge.h
tests/: CMakeLists.txt
tests/fakes/: CMakeLists.txt  FakeHttpClient.cpp  FakeHttpClient.h
tests/fixtures/json/characters/: character_batch.json  malformed_character.json  single_character.json
tests/fixtures/json/episodes/: episode_page_1.json  malformed_episode.json
tests/integration/: CMakeLists.txt  test_placeholder.cpp
tests/mocks/: MockDataObserver.h
tests/property/: CMakeLists.txt  test_placeholder.cpp
tests/system/: CMakeLists.txt  test_placeholder.cpp
tests/unit/: CMakeLists.txt  test_placeholder.cpp
tests/unit/core/: character_parsing_test.cpp  episode_parsing_test.cpp  url_extraction_test.cpp
